[package]
name = "melnet2-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
async-trait = "0.1.57"
easy-parallel = "3.2.0"
melnet2 = "0.1.0"
nanorpc = "0.1.4"
serde = "1.0.144"
serde_json = "1.0.85"
smol = "1.2.5"
smolscale = "0.3.29"
thiserror = "1.0.34"

[profile.release]
panic='abort'